.metadata/.plugins/org.eclipse.cdt.ui/2146.build.log
20:12:27 **** Build of configuration Debug for project 2146 ****
make all 
Building file: ../src/2146.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/2146.d" -MT"src/2146.o" -o "src/2146.o" "../src/2146.cpp"
../src/2146.cpp:62:25: error: a space is required between consecutive right angle brackets (use '> >')
    vector<pair<int, int>> land;
                        ^~
                        > >
../src/2146.cpp:72:13: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
    for(P x : land){
            ^
../src/2146.cpp:84:16: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
    for(Info a : load){
               ^
2 warnings and 1 error generated.
make: *** [src/2146.o] Error 1

20:12:27 Build Finished (took 488ms)

